# pipo-hub

./: .env.example  .gitignore  .secrets.example.yaml  Dockerfile  Makefile  README.md  docker-bake.hcl  docker-compose.example.yaml  docker-compose.yaml  dockerfile-bake.hcl  otel-collector-config.example.yaml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: docker.yml  python.yml  rebase_dependencies.yml
docs/: conf.py
pipo_hub/: .secrets.yaml  __main__.py  app.py  bot.py  broker.py  config.py  pipo.py  settings.yaml  telemetry.py
pipo_hub/cogs/: music_bot.py
pipo_hub/command/: __init__.py  clear.py  command_queue.py  pause.py  play.py  reboot.py  resume.py  skip.py  status.py
pipo_hub/player/: player.py
pipo_hub/player/music_queue/: _remote_music_queue.py  handlers.py  music_queue.py
pipo_hub/player/music_queue/models/: __init__.py
pipo_hub/states/: __init__.py  disconnected_state.py  idle_state.py  playing_state.py
scripts/: healthcheck.py
tests/: conftest.py
tests/integration/: test_health_probes.py  test_music_cog.py  test_music_queue.py
tests/unit/: test_command_queue.py  test_play_input_parser.py  test_pytest.py
tests/unit/states/: test_disconnected_state.py  test_idle_state.py  test_playing_state.py
