[project]
name = "pipo_hub"
version = "0.0.0"
description = "Pipo service responsible for user interaction and Discord server connection"
readme = "README.md"
keywords = [
    "python",
    "discord",
    "music",
    "bot",
]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Players",
]
authors = [
    {name = "André Gonçalves", email = "andrecg95@gmail.com"},
    {name = "Tiago Gonçalves", email = "tiago14_ribeiro@hotmail.com"},
    {name = "Miguel Peixoto", email = "miguel.peixoto.99@gmail.com"},
]
maintainers = [
    {name = "Tiago Gonçalves", email = "tiago14_ribeiro@hotmail.com"},
]
license = {text = "MIT"}
requires-python = ">=3.11,<3.14"
dependencies = [
    "uuid6~=2025.0.1",
    "requests>=2.32,<3.0",
    "pydantic~=2.12.0",
    "expiringdict>=1.2,<2.0",
    "dynaconf[yaml]~=3.2.0",
    "discord-py[voice]~=2.6.4",
    "fastapi[standard]~=0.115.4",
    "faststream[otel,prometheus,rabbit]==0.5.39",
    "audioop-lts<1.0.0,>=0.2.1; python_version>='3.13'",
]

[dependency-groups]
opentelemetry = [
    "opentelemetry-sdk>=1.27,<2.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.27,<2.0",
    "opentelemetry-instrumentation-fastapi==0.48b0",
]
dev = [
    "pytest~=8.4.0",
    "pytest-xdist[psutil]~=3.8.0",
    "pytest-rerunfailures~=15.0.0",
    "mock~=5.2.0",
    "pytest-env~=1.1.0",
    "pytest-mock~=3.14.0",
    "pytest-asyncio~=0.25.2",
    "pytest-cov~=5.0.0",
    "types-mock>=5.1,<6.0",
    "dpytest==0.7.0",
    "ruff==0.9.3",
    "vulture==2.14",
    "radon>=5.1.0,<6.0.0",
]
docs = [
    "pylint~=3.0.0",
    "sphinx~=7.2.0",
    "sphinx-autoapi~=3.0.0",
    "sphinx-immaterial~=0.11.10",
]

[project.urls]
repository = "https://github.com/arraial/pipo-hub"

[project.scripts]
pipo = "pipo_hub.__main__:main"

[tool.uv]
package = true
default-groups = ["dev", "opentelemetry"]

[tool.uv.build-backend]
module-root = ""
module-name = "pipo_hub"

[tool.pytest.ini_options]
addopts = "--cov -m 'not wip' -n auto --reruns 2 --reruns-delay 3.0"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
mock_use_standalone_module = true
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
markers = [
    "wip: suite currently in development, not counting for acceptance",
    "discord: assert discord functionality",
    "unit: unit test suite",
    "integration: integration test suite",
    "e2e: end to end test suite",
    "remote_queue: remote queue unit and integration suite",
]

[tool.pytest_env]
OTEL_SDK_DISABLED = "true"

[tool.coverage.run]
source = ["pipo_hub"]
[tool.coverage.report]
fail_under = 65
omit = [
    "*__init__.py",
    "*__main__.py",
]

[tool.ruff]
extend-exclude = [
    "*__main__.py",
    "*__init__.py",
]
line-length = 88

[tool.ruff.lint]
select = [
    "E",        #pycodestyle error
    "W",        #pycodestyle warning
    "D",        #pydocstyle
    "F",        #pyflakes
    "I",        #isort
    "B",        #bugbear
    "S",        #bandit
    "N",        #pep8-naming
    "G",        #flake8-logging-format
    "PL",       #pylint
    "FLY",      #flynt
    "TRY",      #tryceratops
    "TCH",      #flake8-type-checking
    "C90",      #McCabe complexity
    "ASYNC",    #flake8-async
    "PERF",     #perflint
    "FURB",     #refurb
]
ignore = [
    "D100", # missing docstring in public module
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.vulture]
paths = ["pipo_hub/"]
make_whitelist = true
min_confidence = 70
sort_by_size = true
